changes with photo decription

--- a/index.html
+++ b/index.html
@@ -405,7 +405,9 @@ MHOSA .
             <div class="portfolio-wrap">
               <img src="assets\img\programs\blood5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets\img\programs\blood5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Blood Donation Camp"><i class="bi bi-plus"></i></a>
+                <a href="assets\img\programs\blood5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="രക്ത ക്ഷാമം മൂലം രോഗികൾ ബുദ്ധിമുട്ടാൻ പാടില്ല എന്ന ലക്ഷ്യത്തോടെ ബ്ലഡ് ഡോണോർസ് കേരളയുടെ സഹായത്തോടെ
+ വടകര സഹകരണ ഹോസ്പിറ്റൽ ബ്ലഡ് സെന്ററിൽ രക്ത ദാന ക്യാമ്പ് സംഘടിപ്പിച്ചു.
+"><i class="bi bi-plus"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>Blood Donation Camp</h4>
@@ -417,7 +419,8 @@ MHOSA .
             <div class="portfolio-wrap">
               <img src="assets\img\programs\food6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets\img\programs\food6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Food Contribution"><i class="bi bi-plus"></i></a>
+                <a href="assets\img\programs\food6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="നിരാലംബരായാ തെരുവിൽ കഴിയുന്ന സഹോദരങ്ങൾക്ക് ഭക്ഷണം നൽകുന്ന ബ്ലഡ് ഡോണോർസ് കേരളയുടെ സ്നേഹ സദ്യ എന്ന പദ്ധതിയിൽ ഒരു നേരത്തെ ഭക്ഷണം കൊണ്ട് എം യൂ എം ഹയർ സെക്കന്ററി ഓൾഡ് സ്റ്റുഡന്റ്സ് അസോസിയേഷനും പങ്കാളിയായി.
+"><i class="bi bi-plus"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>Food Contribution</h4>
@@ -429,7 +432,8 @@ MHOSA .
             <div class="portfolio-wrap">
               <img src="assets\img\programs\teachersday1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets\img\programs\teachersday1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Teacher's Day"><i class="bi bi-plus"></i></a>
+                <a href="assets\img\programs\teachersday1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="എന്നും കരുത്തേകിയ പ്രിയ അദ്ധ്യാപകരുടെ കൂടെ അദ്ധ്യാപക ദിനം ആചരിച്ചു.
+"><i class="bi bi-plus"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>Teacher's Day</h4>
@@ -441,7 +445,9 @@ MHOSA .
             <div class="portfolio-wrap">
               <img src="assets\img\programs\blood6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets\img\programs\blood6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Blood Donation Camp"><i class="bi bi-plus"></i></a>
+                <a href="assets\img\programs\blood6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="രക്ത ക്ഷാമം മൂലം രോഗികൾ ബുദ്ധിമുട്ടാൻ പാടില്ല എന്ന ലക്ഷ്യത്തോടെ ബ്ലഡ് ഡോണോർസ് കേരളയുടെ സഹായത്തോടെ
+ വടകര സഹകരണ ഹോസ്പിറ്റൽ ബ്ലഡ് സെന്ററിൽ രക്ത ദാന ക്യാമ്പ് സംഘടിപ്പിച്ചു.
+"><i class="bi bi-plus"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>Blood Donation Camp</h4>
@@ -453,10 +459,10 @@ MHOSA .
             <div class="portfolio-wrap">
               <img src="assets\img\programs\mum4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets\img\programs\mum4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MUM"><i class="bi bi-plus"></i></a>
+                <a href="assets\img\programs\mum4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MUM VHSS VATAKARA"><i class="bi bi-plus"></i></a>
               </div>
               <div class="portfolio-info">
-                <h4>MUM</h4>
+                <h4>MUM VHSS VATAKARA</h4>
               </div>
             </div>
           </div>
@@ -465,7 +471,8 @@ MHOSA .
             <div class="portfolio-wrap">
               <img src="assets\img\programs\helpdesk1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets\img\programs\helpdesk1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Admission Help Desk"><i class="bi bi-plus"></i></a>
+                <a href="assets\img\programs\helpdesk1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="എം യൂ എം സ്കൂൾ പ്രദേശത്തെ കുട്ടികൾക്ക് പ്ലസ് വൺ പ്രവേശനവുമായി ബന്ധപ്പെട്ട പ്രയാസങ്ങൾ ദൂരീകരിക്കാൻ സ്കൂൾ പരിസരത്ത് ഹെല്പ് ഡെസ്ക് സ്ഥാപിച്ച് ഒരുപാട് വിദ്യാർത്ഥികൾക്ക് ഉപകാരപ്രഥമായി മാറ്റി.
+"><i class="bi bi-plus"></i></a>
 
               </div>
               <div class="portfolio-info">
@@ -491,7 +498,8 @@ MHOSA .
             <div class="portfolio-wrap">
               <img src="assets\img\programs\food7.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets\img\programs\food7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Food Contribution"><i class="bi bi-plus"></i></a>
+                <a href="assets\img\programs\food7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="നിരാലംബരായാ തെരുവിൽ കഴിയുന്ന സഹോദരങ്ങൾക്ക് ഭക്ഷണം നൽകുന്ന ബ്ലഡ് ഡോണോർസ് കേരളയുടെ സ്നേഹ സദ്യ എന്ന പദ്ധതിയിൽ ഒരു നേരത്തെ ഭക്ഷണം കൊണ്ട് എം യൂ എം ഹയർ സെക്കന്ററി ഓൾഡ് സ്റ്റുഡന്റ്സ് അസോസിയേഷനും പങ്കാളിയായി.
+"><i class="bi bi-plus"></i></a>
 
               </div>
               <div class="portfolio-info">
@@ -504,7 +512,8 @@ MHOSA .
             <div class="portfolio-wrap">
               <img src="assets\img\programs\drink5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets\img\programs\drink5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sports"><i class="bi bi-plus"></i></a>
+                <a href="assets\img\programs\drink5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="എം യൂ എം സ്കൂളിന്റെ ആഭിമുഖ്യത്തിൽ നടന്ന സ്പോർട്സ് മീറ്റിൽ MHOSA യുടെ പങ്കാളിത്തം ഒരുപാട് കുട്ടികളുടെ ദാഹം മാറ്റാൻ റിഫ്രഷ്മെന്റ് കൌണ്ടറുകളിലൂടെ നൽകി.
+"><i class="bi bi-plus"></i></a>
 
               </div>
               <div class="portfolio-info">
