hashik sir change

--- a/inner-page.html
+++ b/inner-page.html
@@ -246,7 +246,7 @@ img.framed {
                 <div class="teacher">
                   <img src="assets\img\teachers\HASHIK.jpg" alt="Teacher's photo" class="responsive" data-aos="zoom-in">
                   <h3 data-aos-delay="100">HASHIK P P</h3>
-                  <p data-aos-delay="100">M.com, BEd, SET</p>
+                  <p data-aos-delay="100">M.com, BEd, SET, MSc Psychology</p>
                 </div>
                 <div class="teacher">
                   <img src="assets\img\teachers\nafsana.jpg" alt="Teacher's photo" class="responsive" data-aos="zoom-in">
