added nss photo

--- a/index.html
+++ b/index.html
@@ -455,17 +455,7 @@ MHOSA .
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets\img\programs\mum4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets\img\programs\mum4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MUM VHSS VATAKARA"><i class="bi bi-plus"></i></a>
-              </div>
-              <div class="portfolio-info">
-                <h4>MUM VHSS VATAKARA</h4>
-              </div>
-            </div>
-          </div>
+          
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -477,6 +467,18 @@ MHOSA .
               </div>
               <div class="portfolio-info">
                 <h4>Admission Help Desk</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets\img\programs\nss1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets\img\programs\nss1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="മികച്ച എൻ എസ് എസ് യൂണിറ്റിനുള്ള അംഗീകാരം ലഭിച്ച എം യു എം ഹയർ സെക്കന്ററി എൻ എസ് എസ് ടീമിനും, പ്രോഗ്രാം ഓഫീസർ ഹം മാസ്റ്റർക്കും, കരുത്തതായി മാറിയ പ്രിൻസിപ്പൽ സജീവൻ മാസ്റ്റർക്കും
+"><i class="bi bi-plus"></i></a>
+              </div>
+              <div class="portfolio-info">
+                <h4>BEST NSS UNIT AWARD</h4>
               </div>
             </div>
           </div>
