--- a/index.html
+++ b/index.html
@@ -474,9 +474,9 @@ MHOSA .
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets\img\programs\nss1.jpg" class="img-fluid" alt="">
+              <img src="assets\img\programs\NSS1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets\img\programs\nss1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="മികച്ച എൻ എസ് എസ് യൂണിറ്റിനുള്ള അംഗീകാരം ലഭിച്ച എം യു എം ഹയർ സെക്കന്ററി എൻ എസ് എസ് ടീമിനും, പ്രോഗ്രാം ഓഫീസർ ഹം മാസ്റ്റർക്കും, കരുത്തതായി മാറിയ പ്രിൻസിപ്പൽ സജീവൻ മാസ്റ്റർക്കും
+                <a href="assets\img\programs\NSS1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="മികച്ച എൻ എസ് എസ് യൂണിറ്റിനുള്ള അംഗീകാരം ലഭിച്ച എം യു എം ഹയർ സെക്കന്ററി എൻ എസ് എസ് ടീമിനും, പ്രോഗ്രാം ഓഫീസർ ഹം മാസ്റ്റർക്കും, കരുത്തതായി മാറിയ പ്രിൻസിപ്പൽ സജീവൻ മാസ്റ്റർക്കും
 "><i class="bi bi-plus"></i></a>
               </div>
               <div class="portfolio-info">
