--- a/inner-page.html
+++ b/inner-page.html
@@ -200,58 +200,58 @@ img.framed {
               <div class="teacher">
                 <img src="assets\img\teachers\HAJARA.jpg" alt="Teacher's photo" class="responsive" data-aos="zoom-in">
                 <h3 data-aos-delay="100">HAJARA K</h3>
-                <p data-aos-delay="100">MSc, BEd, HSST Mathematics</p>
+                <p data-aos-delay="100">MSc, BEd, Hsst Mathematics</p>
               </div>
               <div class="teacher">
                 <img src="assets\img\teachers\femina.jpg" alt="Teacher's photo" class="responsive" data-aos="zoom-in">
                 <h3 data-aos-delay="100">FEMINA M</h3>
-                <p data-aos-delay="100">Msc, BEd, SET, HSST Chemistry</p>
+                <p data-aos-delay="100">Msc, BEd, SET, Hsst Chemistry</p>
               </div>
               <div class="teacher">
                 <img src="assets\img\teachers\LATHEEF.jpg" alt="Teacher's photo" class="responsive" data-aos="zoom-in">
                 <h3 data-aos-delay="100">ABDULLATHEEF M</h3>
-                <p data-aos-delay="100">MA, M.ED, HSST Economics</p>
+                <p data-aos-delay="100">MA, M.ED, Hsst Economics</p>
               </div>
               <div class="teacher">
                 <img src="assets\img\teachers\HRITHYA.jpg" alt="Teacher's photo" class="responsive" data-aos="zoom-in">
                 <h3 data-aos-delay="100">HREDYA L NATH</h3>
-                <p data-aos-delay="100">Msc, BEd, SET, HSST Physics</p>
+                <p data-aos-delay="100">Msc, BEd, SET, Hsst Physics</p>
               </div>
                 
                 <div class="teacher">
                   <img src="assets\img\teachers\ADEEB.jpg" alt="Teacher's photo" class="responsive" data-aos="zoom-in">
                   <h3 data-aos-delay="100">ADEEB AHAMMED N</h3>
-                  <p data-aos-delay="100">MA, BEd, M Phil, HSST Jr Arabic</p>
+                  <p data-aos-delay="100">MA, BEd, M Phil, Hsst jr Arabic</p>
                 </div>
                 <div class="teacher">
                   <img src="assets\img\teachers\HAMSA.jpg" alt="Teacher's photo" class="responsive" data-aos="zoom-in">
                   <h3 data-aos-delay="100">HAMSA NEELIPILAKANDY</h3>
-                  <p data-aos-delay="100">M.com, MBA, BEd, MEd, HSST Jr Commerce</p>
+                  <p data-aos-delay="100">M.com, MBA, BEd, MEd, Hsst jr Commerce</p>
                 </div>
                 <div class="teacher">
                   <img src="assets\img\teachers\anusree.jpg" alt="Teacher's photo" class="responsive" data-aos="zoom-in">
                   <h3 data-aos-delay="100">ANUSREE S R</h3>
-                  <p data-aos-delay="100">Msc, BEd, SET, CTET, KTET, HSST Zoology</p>
+                  <p data-aos-delay="100">Msc, BEd, SET, CTET, KTET, Hsst Zoology</p>
                 </div>
                 <div class="teacher">
                   <img src="assets\img\teachers\AMRTHA.jpg" alt="Teacher's photo" class="responsive" data-aos="zoom-in">
                   <h3 data-aos-delay="100">AMRITHA K</h3>
-                  <p data-aos-delay="100">Msc, BEd, SET, HSST Jr Botony</p>
+                  <p data-aos-delay="100">Msc, BEd, SET, Hsst jr Botony</p>
                 </div>
                 <div class="teacher">
                   <img src="assets\img\teachers\SAJINA.jpg" alt="Teacher's photo" class="responsive" data-aos="zoom-in">
                   <h3 data-aos-delay="100">SAJNA P</h3>
-                  <p data-aos-delay="100">MCA, HSST Computer Application</p>
+                  <p data-aos-delay="100">MCA, Hsst Computer Application</p>
                 </div> 
                 <div class="teacher">
                   <img src="assets\img\teachers\HASHIK.jpg" alt="Teacher's photo" class="responsive" data-aos="zoom-in">
                   <h3 data-aos-delay="100">HASHIK P P</h3>
-                  <p data-aos-delay="100">M.com, BEd, SET, MSc Psychology, HSST Commerce</p>
+                  <p data-aos-delay="100">M.com, BEd, SET, MSc Psychology, Hsst Commerce</p>
                 </div>
                 <div class="teacher">
                   <img src="assets\img\teachers\nafsana.jpg" alt="Teacher's photo" class="responsive" data-aos="zoom-in">
                   <h3 data-aos-delay="100">NAFSANA A V</h3>
-                  <p data-aos-delay="100">MA, BEd, HSST English</p>
+                  <p data-aos-delay="100">MA, BEd, Hsst English</p>
                 </div>
           </div><br>
           <h1 data-aos="fade-up" data-aos-delay="100" style="font-family:Times New Roman">Lab Assistant</h1>
